ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: ngo.basils.live
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ngo-app-service
            port:
              number: 80
 # tls:
  #- hosts:
   # - ngo.korede.me
    #secretName: ssl
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: grafana.basils.live
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
 # tls:
  #- hosts:
   # - ngo.korede.me
    #secretName: ssl

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus 
  namespace: monitoring 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: prometheus.basils.live
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
 # tls:
  #- hosts:
   # - ngo.korede.me
    #secretName: ssl
